--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -47,6 +47,16 @@
   padding: 123px 19px;
 }
 
+.modal__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
 .modal__container {
   position: relative;
   padding: 34px 36px;
